--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.9-alist.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.9-alist.md
@@ -72,7 +72,7 @@ name="alist"
 rcvar="alist_enable"
 command_path=/home/ykla/alist/build       # 可执行文件所在目录
 command="${command_path}/alist"           # 命令路径
-command_args="server --data ${command_path}/data"    # 启动命令参数
+command_args="start --data ${command_path}/data"    # 启动命令参数
 pidfile="${command_path}/daemon/pid"      # pid文件路径(和可执行文件路径相关)
 argument_stop="stop"                      # 停止命令参数
 
