--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.9-alist.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.9-alist.md
@@ -104,6 +104,8 @@ Waiting for PIDS: 3436.
 
 `http://ip:5244`，请将 `ip` 改为你的局域网地址。
 
+![Alist in FreeBSD](../.gitbook/assets/alist.png)
+
 #### 参考文献
 
 - [alist指定--data运行不起作用](https://github.com/AlistGo/alist/issues/2580)。
