--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.9-alist.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.9-alist.md
@@ -17,11 +17,11 @@
 # cd /usr/ports/lang/go/ && make install clean
 ```
 
-```
+```sh
 # git clone -b v3.38.0  https://github.com/alist-org/alist # 写作本文时，最新版本为 v3.38.0
 # cd alist/public
-# fetch https://github.com/AlistGo/alist-web/releases/download/3.38.0/dist.tar.gz     # 这是前端部分，官方有已经编译好的,注意和后端对应
-# tar xzvf dist.tar.gz  #解压缩
+# fetch https://github.com/AlistGo/alist-web/releases/download/3.38.0/dist.tar.gz     # 这是前端部分，官方已经编译好的,注意和后端版本相对应
+# tar xzvf dist.tar.gz  # 解压缩
 # rm dist.tar.gz # 清理垃圾
 # cd ..
 ```
@@ -37,8 +37,6 @@
 编译后的文件即在 `build` 下。
 
 
-根据输出，管理员用户 `admin` 密码是 `3ZybIiuA`。
-
 ## 部署 rc 服务
 
 ### 编写 `/usr/local/etc/rc.d/alist`
@@ -52,14 +50,14 @@
 
 name="alist"
 rcvar="alist_enable"
-command_path=/home/ykla/alist/build       # 可执行文件 alist 所在目录
-command="${command_path}/alist"           # 命令路径
-command_args="start"                      # 启动命令参数
-argument_stop="stop"                      # 停止命令参数
+command_path=/home/ykla/alist/build  # 可执行文件 alist 所在目录
+command="${command_path}/alist"      # 命令路径
+command_args="start"                 # 启动命令参数
+argument_stop="stop"                 # 停止命令参数
 
-load_rc_config $name                      # 载入 rc.conf 文件中定义的变量
-: ${alist_enable:=no}                     # 如果未设置 alist_enable 则设为 no
-run_rc_command "$1"                       # 运行 service 命令
+load_rc_config $name                 # 载入 rc.conf 文件中定义的变量
+: ${alist_enable:=no}                # 如果未设置 alist_enable 则设为 no
+run_rc_command "$1"                  # 运行 service 命令
 ```
 
 增加执行权限
@@ -77,14 +75,14 @@ run_rc_command "$1"                       # 运行 service 命令
 初始化：
 
 ```sh
-# service alist start #先启动服务
+# service alist start # 先启动服务
 Starting alist.
 INFO[2024-10-28 22:43:45] success start pid: 3436                      
-# service alist stop #再结束服务
+# service alist stop # 再结束服务
 Stopping alist.
 Waiting for PIDS: 3436.
 # rm -rf daemon
-# ps #查看有无正在运行 alist，将其 kill，若无可跳过下一步
+# ps # 查看有无正在运行 alist，将其 kill，若无可跳过下一步
 # kill 3436
 ```
 
