--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.9-alist.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.9-alist.md
@@ -5,6 +5,7 @@
 
 - 功能请求：做成 Port。
 
+安装依赖：
 
 ```sh
 # pkg install git go
@@ -16,6 +17,8 @@
 # cd /usr/ports/devel/git/ && make install clean
 # cd /usr/ports/lang/go/ && make install clean
 ```
+
+然后：
 
 ```sh
 # git clone -b v3.38.0  https://github.com/alist-org/alist # 写作本文时，最新版本为 v3.38.0
