--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.9-alist.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.9-alist.md
@@ -68,10 +68,17 @@ run_rc_command "$1"                  # 运行 service 命令
 # chmod +x /usr/local/etc/rc.d/alist
 ```
 
+
 ### 使用 alist 服务
 
 ```sh
 # sysrc alist_enable=YES
+```
+
+增强安全，使用普通用户执行进程（注意 `build` 目录的属主和组都必须是 `ykla`）：
+
+```sh
+# sysrc alist_user=ykla
 ```
 
 #### 初始化方案一
@@ -126,6 +133,7 @@ Waiting for PIDS: 3436.
 `http://ip:5244`，请将 `ip` 改为你的局域网地址。用户名是 `admin`。
 
 ![Alist in FreeBSD](../.gitbook/assets/alist.png)
+
 
 #### 参考文献
 
