--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.9-alist.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.9-alist.md
@@ -55,7 +55,12 @@ rcvar="alist_enable"
 command_path=/home/ykla/alist/build  # 可执行文件 alist 所在目录
 command="${command_path}/alist"      # 命令路径
 command_args="start"                 # 启动命令参数
-argument_stop="stop"                 # 停止命令参数
+stop_cmd=do_stop                     # 停止命令参数
+
+do_stop()
+{
+    ${command} stop
+}
 
 load_rc_config $name                 # 载入 rc.conf 文件中定义的变量
 : ${alist_enable:=no}                # 如果未设置 alist_enable 则设为 no
