--- a/di-14-zhang-wang-luo-guan-li/di-14.5-yi-tai-wang-ka.md
+++ b/di-14-zhang-wang-luo-guan-li/di-14.5-yi-tai-wang-ka.md
@@ -128,18 +128,17 @@ if_re_load="YES"
 if_re_name="/boot/modules/if_re.ko"
 ```
 
-默认情况下已经开启巨型帧，要关闭：
+默认情况下已经开启巨型帧，要关闭（影响网速，如网速过慢可关闭之）：
 
 ```
-# sysctl hw.re.max_rx_mbuf_sz # 查看当前设置
-# echo hw.re.max_rx_mbuf_sz="2048" >> /etc/sysctl.conf
+# echo hw.re.max_rx_mbuf_sz="2048" >> /boot/loader.conf
 ```
 
 要启用 WOL 唤醒：
 
 ```
-# echo hw.re.s5wol="1"  >> /etc/sysctl.conf
-# echo hw.re.s0_magic_packet="1"  >> /etc/sysctl.conf
+# echo hw.re.s5wol="1"  >> /boot/loader.conf
+# echo hw.re.s0_magic_packet="1"  >> /boot/loader.conf
 ```
 
 以上设置完毕后均需重启。
