--- a/di-14-zhang-wang-luo-guan-li/di-14.5-yi-tai-wang-ka.md
+++ b/di-14-zhang-wang-luo-guan-li/di-14.5-yi-tai-wang-ka.md
@@ -108,21 +108,28 @@ ifconfig_xxx="inet x.x.x.x netmask x.x.x.x promisc"
   - rtl8401 / rtl8402
 
 #### 安装方法
+
+
+
+```sh
+# cd /usr/ports/net/realtek-re-kmod/ 
+# make install clean
+```
+
+>**注意**
+>
+>编译安装时，需要有一份源代码在 `/usr/src`。
+
+或者
   
 ```
 pkg install realtek-re-kmod
 ```
 
-或
-
-```
-# cd /usr/ports/net/realtek-re-kmod/ 
-# make install clean
-```
 
 配置：
 
-```
+```sh
 # ee /boot/loader.conf # 写入以下两行
 if_re_load="YES"
 if_re_name="/boot/modules/if_re.ko"
@@ -130,13 +137,13 @@ if_re_name="/boot/modules/if_re.ko"
 
 默认情况下已经开启巨型帧，要关闭（影响网速，如网速过慢可关闭之）：
 
-```
+```sh
 # echo hw.re.max_rx_mbuf_sz="2048" >> /boot/loader.conf
 ```
 
 要启用 WOL 唤醒：
 
-```
+```sh
 # echo hw.re.s5wol="1"  >> /boot/loader.conf
 # echo hw.re.s0_magic_packet="1"  >> /boot/loader.conf
 ```
