Update and rename shu-jv-ku.md to 0.5-shu-jv-ku.md

--- a/di-0-zhang-ji-suan-ji-gai-lun/0.5-shu-jv-ku.md
+++ b/di-0-zhang-ji-suan-ji-gai-lun/0.5-shu-jv-ku.md
@@ -1,4 +1,4 @@
-# MySQL
+# MySQL 数据库
 
 修改用户密码
 
@@ -47,7 +47,7 @@ show databases;
 
 输出的表格：
 
-```
+```sql
 +--------------------+
 | Database           |
 +--------------------+
@@ -64,6 +64,7 @@ show databases;
 ## 进入数据库
 
 `use xxx;`
+
 再进入其他数据库重复上面语句。
 
 ## 删除数据库
@@ -74,10 +75,9 @@ drop database xxx;
 
 注意不能删除系统数据库：
 
-- Information_schema
-- Mysql
-- Performance_schema
-- Test
+- information_schema
+- mysql
+- performance_schema
 
 GBK: 国家标准扩展码（Guo-Biao Kuozhan）  
 BIG5：大五码，繁体中文社区最常用的电脑汉字字符集标准。
