--- a/di-0-zhang-ji-suan-ji-gai-lun/0.5-shu-jv-ku.md
+++ b/di-0-zhang-ji-suan-ji-gai-lun/0.5-shu-jv-ku.md
@@ -1,10 +1,5 @@
 # MySQL 数据库
 
-修改用户密码
-
-```sql
-ALTER USER 'root'@'localhost' IDENTIFIED BY 'your_new_password';
-```
 
 UNIX 连接 MySQL
 
@@ -79,8 +74,14 @@ drop database xxx;
 - mysql
 - performance_schema
 
-GBK: 国家标准扩展码（Guo-Biao Kuozhan）  
-BIG5：大五码，繁体中文社区最常用的电脑汉字字符集标准。
+## 编码问题
+
+- GBK: 国家标准扩展码（Guo-Biao Kuozhan）  
+- BIG5：大五码，繁体中文社区最常用的电脑汉字字符集标准。
+
+>**注意**
+>
+>由于设计缺陷，MySQL 的 UTF-8 不是标准完整的 UTF-8，实际上只是 utf8mb3。而我们应该使用 utf8mb4（MySQL 官方推荐）。
 
 ## 数据库重命名
 
@@ -111,9 +112,9 @@ default character set UTF-8;
 
 - FLOAT，4 字节，
 - DOUBLE，8 字节
-  DECIMAL：  
-  P 是表示有效数字数的精度。 P 范围是 1 到 65。  
-  D 是表示小数点后的位数。 D 的范围是 0 到 30。D 肯定是要小于或等于(<=)P 的。
+- DECIMAL(P, D)：  
+  - P 是表示有效数字数的精度。 P 范围是 1 到 65。  
+  - D 是表示小数点后的位数。 D 的范围是 0 到 30。D 肯定是要小于或等于（`<=`）P 的。
 
 想要数据库类型为无符号，请添加 UNSIGNED 属性。
 
@@ -177,8 +178,8 @@ mysql> desc MyTable;
 2 rows in set (0.01 sec)
 ```
 
-Null：是否允许为空  
-Extra: 对于该列的备注
+- Null：是否允许为空  
+- Extra: 对于该列的备注
 
 ## 表约束
 
@@ -195,16 +196,17 @@ create table if not exists stu_table
 )
 ```
 
-上面代码：
-stu_id 被设置为主键，  
-stu_name 被设置为唯一，  
-stu_age 被设置为禁止为空。
+以上：
+
+- `stu_id` 被设置为主键，  
+- `stu_name` 被设置为唯一，  
+- `stu_age` 被设置为禁止为空。
 
 ## 如何执行 MySQL 脚本
 
 在命令行中执行：
 
-```sql
+```shell
 # mysql -u root -p 密码 < SQL脚本路径
 ```
 
@@ -213,3 +215,9 @@ stu_age 被设置为禁止为空。
 ```sql
 mysql> source test.sql
 ```
+
+## 参考文献
+
+- [12.9.2 The utf8mb3 Character Set (3-Byte UTF-8 Unicode Encoding)](https://dev.mysql.com/doc/refman/8.4/en/charset-unicode-utf8mb3.html)
+- [12.9.1 The utf8mb4 Character Set (4-Byte UTF-8 Unicode Encoding)](https://dev.mysql.com/doc/refman/8.4/en/charset-unicode-utf8mb4.html)
+- [为什么MySQL中字符集应该使用utf8mb4而不是utf8](https://www.csudata.com/csu_article/10109)
