--- a/di-0-zhang-ji-suan-ji-gai-lun/0.5-shu-jv-ku.md
+++ b/di-0-zhang-ji-suan-ji-gai-lun/0.5-shu-jv-ku.md
@@ -79,7 +79,7 @@ drop database xxx;
 - GBK: 国家标准扩展码（Guo-Biao Kuozhan）  
 - BIG5：大五码，繁体中文社区最常用的电脑汉字字符集标准。
 
->**注意**
+>**警告**
 >
 >由于设计缺陷，MySQL 的 UTF-8 不是标准完整的 UTF-8，实际上只是 utf8mb3。而我们应该使用 utf8mb4（MySQL 官方推荐）。
 
@@ -139,7 +139,9 @@ mysql> create table if not exists MyTable
 Query OK, 0 rows affected (0.06 sec)
 ```
 
-==注意！表格是放在数据库里面的，进入 MySQL 解释器以后必须使用 use 命令进入你的数据库==
+>**注意**
+>
+>表格是放在数据库里面的，进入 MySQL 解释器以后必须使用 `use` 命令进入你的数据库
 
 ## 查看数据表
 
