--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.6-jie-NextCloud.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.6-jie-NextCloud.md
@@ -2,21 +2,27 @@
 
 >**警告**
 >
->正在测试！请勿使用
+>正在测试！请勿使用。
+
+## 基于 PostgreSQL
 
 为了方便安装，请使用 Ports 而非 pkg：
 
 ```sh
 # cd /usr/ports/www/nextcloud/
-# make config-recursive
-# make install clean
+# make config # 为了方便，仅配置 nextcloud 本体
 ```
 
-本文选中 PostgreSQL，SMB，PCNTL；取消勾选 MYSQL。
+本文选中 `PostgreSQL`，`SMB`，`PCNTL`；取消勾选 MYSQL：
 
+编译安装：
+
+```sh
+# make BATCH=yes install clean
+```
 
 
 ## 参考文献
 
-- [System requirements](https://docs.nextcloud.com/server/latest/admin_manual/installation/system_requirements.html)，各种软件的版本需求
+- [System requirements](https://docs.nextcloud.com/server/latest/admin_manual/installation/system_requirements.html)，各种软件的版本需求
 - [PHP Modules & Configuration](https://docs.nextcloud.com/server/latest/admin_manual/installation/php_configuration.html)，需要和可选的 PHP 模块及配置
