--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.8-jie-postgresql-yu-pgadmin4.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.8-jie-postgresql-yu-pgadmin4.md
@@ -2,7 +2,7 @@
 
 ## PostgreSQL
 
-PostgreSQL 是一款自由的对象-关系型数据库，最早发布于 1989 年 6 月。 在 FreeBSD 上，提供了 9.6、10、11、12、13、14 共计 6 个大版本可选。在多方面均优于 mysql。
+PostgreSQL 是一款自由的对象-关系型数据库，最早发布于 1989 年 6 月。 在 FreeBSD 上，提供多个大版本可选。在多方面均优于 mysql。
 
 ### postgresql 安装示例，6 个版本都如此。
 
