--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.6-jie-NextCloud.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.6-jie-NextCloud.md
@@ -59,6 +59,15 @@ CREATE DATABASE
 postgres-# \q # 退出，注意斜杠要输入：\ 
 ```
 
+>**技巧**
+>
+>远程访问数据库服务器请自行配置 `/var/db/postgres/data16/pg_hba.conf`。
+>
+>示例（IP 段 `10.0.50.5/32` 照抄不管用）：
+>
+>```sh
+>host    nextcloud       nextcloud       10.0.50.5/32               scram-sha-256
+>```
 
 ## 安装 Apache
 
