--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.6-jie-NextCloud.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.6-jie-NextCloud.md
@@ -223,6 +223,13 @@ Alias /nextcloud /usr/local/www/nextcloud
 
 ![nextcloud Port](../.gitbook/assets/nextclould4.png)
 
+## 备注
+
+常用插件，可以用 `pkg search -x nextcloud | grep php82` 查找，pkg 安装。
+
+>**注意**
+>
+>之前有些版本在初始化 nextcloud 时，会有权限问题，请你检查 `/usr/local/www/nextcloud` 中 `config` 目录及其下文件的访问权限，看运行 `apache` 的用户是否可读写之。
 
 ## 参考文献
 
