--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.6-jie-NextCloud.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.6-jie-NextCloud.md
@@ -219,6 +219,8 @@ Alias /nextcloud /usr/local/www/nextcloud
 
 ![nextcloud Port](../.gitbook/assets/nextclould2.png)
 
+安装完成会重定向到插件推荐：不必理会，重新定位到 "http://ip/nextcloud" 即可正常使用之。
+
 ![nextcloud Port](../.gitbook/assets/nextclould3.png)
 
 ![nextcloud Port](../.gitbook/assets/nextclould4.png)
