--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.6-jie-NextCloud.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.6-jie-NextCloud.md
@@ -3,7 +3,16 @@
 
 ## 安装 nextcloud
 
-为了方便安装，请使用 Ports 而非 pkg：
+>**注意**
+>
+>本文写作时 Nextcloud 与 php84 尚不兼容，会显示以下内容：
+>
+>```sh
+>This version of Nextcloud is not compatible with PHP>=8.4.
+>You are currently running 8.4.0RC3.
+>```
+
+故，为了方便安装，请使用 Ports 而非 pkg：
 
 ```sh
 # cd /usr/ports/www/nextcloud/
