--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.6-jie-NextCloud.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.6-jie-NextCloud.md
@@ -5,7 +5,7 @@
 
 >**注意**
 >
->本文写作时 Nextcloud 与 php84 尚不兼容，会显示以下内容：
+>本文写作时 Nextcloud 与 php84 尚不兼容，pkg 安装基于 php84 的 Nextcloud 会显示以下内容：
 >
 >```sh
 >This version of Nextcloud is not compatible with PHP>=8.4.
@@ -222,17 +222,17 @@ Alias /nextcloud /usr/local/www/nextcloud
 
 `http://ip:nextcloud/i` 即可。请把 `ip` 替换成你的局域网 ip。
 
-![nextcloud Port](../.gitbook/assets/nextclould1.png)
+![nextcloud FreeBSD 安装界面](../.gitbook/assets/nextclould1.png)
 
 请输入你需要的登录账户和密码。其他照抄即可。
 
-![nextcloud Port](../.gitbook/assets/nextclould2.png)
+![nextcloud FreeBSD 安装中](../.gitbook/assets/nextclould2.png)
 
 安装完成会重定向到插件推荐：不必理会，重新定位到 "http://ip/nextcloud" 即可正常使用之。
 
-![nextcloud Port](../.gitbook/assets/nextclould3.png)
+![nextcloud FreeBSD 安装后](../.gitbook/assets/nextclould3.png)
 
-![nextcloud Port](../.gitbook/assets/nextclould4.png)
+![nextcloud FreeBSD 开始界面](../.gitbook/assets/nextclould4.png)
 
 ## 备注
 
