--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.6-jie-NextCloud.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.6-jie-NextCloud.md
@@ -19,7 +19,7 @@
 # make config # 为了方便，仅配置 nextcloud 本体
 ```
 
-本文选中 `PostgreSQL`，`SMB`，`PCNTL`；取消勾选 MYSQL：
+本文选中 `PostgreSQL`，`SMB`，`PCNTL`；取消勾选 `MYSQL`：
 
 ![nextcloud Port](../.gitbook/assets/ports-netclould-pgsql.png)
 
