--- a/di-10-zhang-xu-ni-hua/di-10.3-jie-shi-yong-bhyve-an-zhuang-windows-10.md
+++ b/di-10-zhang-xu-ni-hua/di-10.3-jie-shi-yong-bhyve-an-zhuang-windows-10.md
@@ -6,7 +6,7 @@
 
 > Windows 10 22H2 原版系统磁力链接：
 >
-> magnet:?xt=urn:btih:7bcf7952a6c114c25c92cdefc64a35fa4d30cd75\&dn=SW_DVD9_Win_Pro_10_22H2_64BIT_ChnSimp_Pro_Ent_EDU_N_MLF_X23-20012.ISO\&xl=5953392640
+> `magnet:?xt=urn:btih:7bcf7952a6c114c25c92cdefc64a35fa4d30cd75\&dn=SW_DVD9_Win_Pro_10_22H2_64BIT_ChnSimp_Pro_Ent_EDU_N_MLF_X23-20012.ISO\&xl=5953392640`
 
 加载内核模块：
 
