--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.6-jie-NextCloud.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.6-jie-NextCloud.md
@@ -5,7 +5,7 @@
 
 >**注意**
 >
->本文写作时（2024.11.1）Nextcloud 与 php84 尚不兼容，pkg 安装基于 php84 的 Nextcloud 会显示以下内容：
+>本文写作时（2024.11.1）Nextcloud 与 php84 尚不兼容，pkg 安装基于 `nextcloud-php84` 的 Nextcloud 会显示以下内容：
 >
 >```sh
 >This version of Nextcloud is not compatible with PHP>=8.4.
