--- a/di-19-zhang-wen-xue-gu-shi/di-19.2-jie-linux-bai-ju-yi-ding-bo-freebsd-da-bai-ju.md
+++ b/di-19-zhang-wen-xue-gu-shi/di-19.2-jie-linux-bai-ju-yi-ding-bo-freebsd-da-bai-ju.md
@@ -1,4 +1,4 @@
-# 第 19.2 节 Linux 败局与 FreeBSD 败局
+# 第 19.2 节 Linux 败局与 FreeBSD 败局（旧版）
 
 维护建议：
 
@@ -177,9 +177,13 @@ Arch Linux 官方源里基本上没有什么软件，不导入 aur 源（ Arch U
 - [Benefits of Gentoo](https://wiki.gentoo.org/wiki/Benefits_of_Gentoo)
 - [The philosophy of Gentoo](https://www.gentoo.org/get-started/philosophy/)
 - [Arch compared to other distributions](https://wiki.archlinux.org/title/Arch_compared_to_other_distributions)，翻译[在这里](https://wiki.archlinuxcn.org/wiki/Arch_%E4%B8%8E%E5%85%B6%E4%BB%96%E5%8F%91%E8%A1%8C%E7%89%88%E7%9A%84%E6%AF%94%E8%BE%83)。
+
+
 ## Linux 败局
 
-> **建议先阅读原文：[FreeBSD 大败局](https://my.oschina.net/oscpyaqxylk/blog/5457229)**，然后再来阅读本文。
+>**技巧**
+>
+>建议先阅读原文：[还有人记得 Linux 之前，那个理想又骄傲的 BSD 吗？](https://my.oschina.net/u/5324949/blog/5434988)、[FreeBSD 大败局](https://my.oschina.net/oscpyaqxylk/blog/5457229)，然后再来阅读本文。
 
 看过我上一篇文章《Linux 社区已经成为了一个肮脏的泥潭》以及上上一篇文章《Linux 与苦难哲学》的读者都知道，Linux 从开发者到社区乃至于用户都是充斥着难以言表的一种骄傲。仿佛自己是真正的 UNIX 后裔，是开源界的唯一真理，谁拥有 Linux，谁会 Linux，谁就掌握话语权。
 
