--- a/di-19-zhang-wen-xue-gu-shi/19.3-linux-da-bai-ju.md
+++ b/di-19-zhang-wen-xue-gu-shi/19.3-linux-da-bai-ju.md
@@ -1,2 +1,26 @@
 # 第 19.3 节 Linux 大败局
 
+本文旨在回应 [还有人记得 Linux 之前，那个理想又骄傲的 BSD 吗？](https://my.oschina.net/u/5324949/blog/5434988)与 [FreeBSD 大败局](https://my.oschina.net/oscpyaqxylk/blog/5457229) 两篇文章。
+
+## 回应 [还有人记得 Linux 之前，那个理想又骄傲的 BSD 吗？](https://my.oschina.net/u/5324949/blog/5434988)
+
+“作为 Unix 最绕不开的一族分支，它的摇篮是当时美国最为激进的左派大本营 —— 加州大学伯克利分校。”开源软件运动本身就接近左翼，无论 GNU 还是 Linux。
+
+有人认为“If Linux hadn't conquered the world, we'd all be running FreeBSD, maybe even on our desktops（如果 Linux 未征服世界，那么我们可能全部运行着 FreeBSD，乃至于桌面）”。这是一种对开源不怎么正确地理解方式。总是有人不断地询问我，谁在用 FreeBSD，到底有没有人用 FreeBSD，为什么我没看到国内什么大公司在用 FreeBSD？这个问题也一直深深地困扰着我。然而事实是，FreeBSD 无处不在。举个例子，几乎所有现代安卓手机都强制开启了 SElinux，而且很多银行软件会对其进行检测来判断你的手机 root 与否。人们可能只在 RHEL 或基于他的系统上感受到 SElinux 的存在，但是，事实是它无处不在。FreeBSD 亦如此。我们的确，全部运行着 FreeBSD，这一点，毫无疑问。这也真正体现了 FreeBSD 的项目宗旨——“我们相信，我们的首要‘使命’是向所有人提供代码，无论其目的如何，以便代码能得到尽可能普遍的使用，并产生尽可能大的利益”。然而，越是有人问出此类问题，越是说明了 FreeBSD 的成功。[原文作者](https://www.infoworld.com/article/2282440/a-world-without-linux-where-would-apache-microsoft-even-apple-be-today.html)可能还不清楚，他所看不起的 Minix，[也许正运行在他的处理器中](https://www.zdnet.com/article/minix-intels-hidden-in-chip-operating-system/)。
+
+
+“随后，和 Dennis Ritchie 一起， Ken Thompson 用 C 语言重写了 Unix 操作系统。”这里顺序有问题，Unix 的早期版本并不是用 C 语言编写的，而是 B 语言（B 语言基于 A 语言——ALGOL）。第四版研究 UNIX（Research Unix）才是使用 C 语言重写的。
+
+“所以，1970 年也被称为 Unix 元年。”并不准确，最初的版本实际上是在 1969 年完成的。
+
+“幸运的是，当时 AT&T 受到了美国《谢尔曼反托拉斯法》的限制，不能销售电话机电报机之外的商品，这为 Unix 流向学术机构打开了窗口。”仅从时间上看，很难说明  Unix 流向学术机构是受制于《谢尔曼法》。这里是有问题的。应是受限制于 1956 年同意令。
+
+“1975 年，伯克利购买了 DEC 公司最新的计算机 PDP-11/70。恰逢 Ken Thompson 休假一年，回母校担任客座教授。就在这台计算机上，他安装了最新版本的 Unix（V6 版本）。在 Ken Thompson 的引导下，当时还是研究生的 Bill Joy 在 1977 年 开始编译第一个 BSD。在 AT&T 的放养状态下，Unix 得到了长足发展。”——这部分明显来自维基百科条目“[History of the Berkeley Software Distribution](https://en.wikipedia.org/wiki/History_of_the_Berkeley_Software_Distribution)”及“[Ken Thompson](https://en.wikipedia.org/wiki/Ken_Thompson)”存在翻译错误：Bill Joy 并非编译所谓第一个 BSD，而是 1BSD，1BSD 和“第一个 BSD”是两码事。实际上，1974 年，加州大学伯克利分校的 Bob Fabry 教授就从 AT&T 获得了 UNIX 的源代码许可。
+
+“1977 年开始，AT&T 分解后终于摆脱反垄断的掣肘”贝尔系统分解于 1982 年，1977 年并未分解。“从 1979 年 UNIX 的 V7 版本开始，Unix 的许可证开始禁止大学使用 Unix 源码，包括在授课中学习。”——这段话似乎也来自不知名的[书籍](https://www.cnblogs.com/smlile-you-me/p/17732762.html)。并且，UNIX V7 从未有过此类限制，来源请求。并且是到 Unix System III、V 才完全禁止源代码分发（至迟 1982）。
+
+“而且，BSD 系统发行版包含每个部分的完整源代码，而不是以纯二进制格式发布。因此，BSD 每一次对外分发，都要在 AT&T 的许可之下。到了 80 年代后期，Unix 日益流行 ，AT&T 将许可费从最初的 99 美元稳步提高到 250,000 美元。”同样来自上一段的[书籍](https://www.cnblogs.com/smlile-you-me/p/17732762.html)。首先，在早期，BSD 的某些版本确实是以二进制格式发布的，尤其是在许可证的限制下。其次，这个数字不准确，来源请求。
+
+“正如 OpenBSD 创始人 Theo de Raadt 所言：'我们更多的时间是花在让东西更好，而不是让它符合大众的口味。'”我并未找到出处，来源请求。
+
+
