--- a/di-19-zhang-wen-xue-gu-shi/19.3-linux-da-bai-ju.md
+++ b/di-19-zhang-wen-xue-gu-shi/19.3-linux-da-bai-ju.md
@@ -17,7 +17,7 @@
 
 “1975 年，伯克利购买了 DEC 公司最新的计算机 PDP-11/70。恰逢 Ken Thompson 休假一年，回母校担任客座教授。就在这台计算机上，他安装了最新版本的 Unix（V6 版本）。在 Ken Thompson 的引导下，当时还是研究生的 Bill Joy 在 1977 年 开始编译第一个 BSD。在 AT&T 的放养状态下，Unix 得到了长足发展。”——这部分明显来自维基百科条目“[History of the Berkeley Software Distribution](https://en.wikipedia.org/wiki/History_of_the_Berkeley_Software_Distribution)”及“[Ken Thompson](https://en.wikipedia.org/wiki/Ken_Thompson)”存在翻译错误：Bill Joy 并非编译所谓第一个 BSD，而是 1BSD，1BSD 和“第一个 BSD”是两码事。实际上，1974 年，加州大学伯克利分校的 Bob Fabry 教授就从 AT&T 获得了 UNIX 的源代码许可。
 
-“1977 年开始，AT&T 分解后终于摆脱反垄断的掣肘”贝尔系统分解于 1982 年，1977 年并未分解。“从 1979 年 UNIX 的 V7 版本开始，Unix 的许可证开始禁止大学使用 Unix 源码，包括在授课中学习。”——这段话似乎也来自不知名的[书籍](https://www.cnblogs.com/smlile-you-me/p/17732762.html)。并且，UNIX V7 从未有过此类限制，来源请求。并且是到 Unix System III、V 才完全禁止源代码分发（至迟 1982）。
+“1977 年开始，AT&T 分解后终于摆脱反垄断的掣肘”贝尔系统分解于 1982 年，1977 年并未分解。“从 1979 年 UNIX 的 V7 版本开始，Unix 的许可证开始禁止大学使用 Unix 源码，包括在授课中学习。”——这段话似乎也来自不知名的[书籍](https://www.cnblogs.com/smlile-you-me/p/17732762.html)。并且，UNIX V7 从未有过此类限制，来源请求。并且是到 Unix System III、V 才完全禁止源代码分发（至迟 1982）。因此才引发了 GNU 项目（1983）。
 
 “而且，BSD 系统发行版包含每个部分的完整源代码，而不是以纯二进制格式发布。因此，BSD 每一次对外分发，都要在 AT&T 的许可之下。到了 80 年代后期，Unix 日益流行 ，AT&T 将许可费从最初的 99 美元稳步提高到 250,000 美元。”同样来自上一段的[书籍](https://www.cnblogs.com/smlile-you-me/p/17732762.html)。首先，在早期，BSD 的某些版本确实是以二进制格式发布的，尤其是在许可证的限制下。其次，这个数字不准确，来源请求。
 
