--- a/di-19-zhang-wen-xue-gu-shi/19.3-linux-da-bai-ju.md
+++ b/di-19-zhang-wen-xue-gu-shi/19.3-linux-da-bai-ju.md
@@ -23,4 +23,18 @@
 
 “正如 OpenBSD 创始人 Theo de Raadt 所言：'我们更多的时间是花在让东西更好，而不是让它符合大众的口味。'”我并未找到出处，来源请求。
 
+““我们编写了这段代码，他们（AT&T）却声称它是他们的。这让我们很生气，因为他们拿走了我们的工作，没有支付一分钱，还通过出售该死的许可证赚钱。” —— Marshall Kirk McKusick (他亲身参与了 4.3BSD 和 4.4BSD 的开发和发行)”我并未找到原文，来源请求。
+
+“这简直是​​一种耻辱，把 BSDi 卷入和 AT&T 的愚蠢的法律纠纷，这就出现了领导真空的情况，整个 BSD 社区都充满了恐惧、不确定性和怀疑，导致了我们失去了巨大领土给 Linux。—— FreeBSD 创始人之一 Jordan Hubbard” 我并未找到出处，来源请求。
+
+“在 IT 产业刚创立之时，根本没有什么开源闭源一说，软件依附于硬件的绑定附送，以源代码的形式提供的，而非现在的执行码。”——本末倒置，1980 年美国国会方才通过了版权法修正案，将计算机软件正式纳入版权法的保护对象。
+
+“加州大学的律师抓住了这一机会，以侵犯版权为由向 AT&T 提出反诉。一场浩浩荡荡、留名史册的版权战争就此拉开序幕。”并非拉开序幕，此时已经是诉讼案的中期了。（1992.4 提出，伯克利 1993.7 反诉，1994.1 和解）
+
+作者引用的阮一峰“[Unix版权史](https://ruanyifeng.com/blog/2010/03/unix_copyright_history.html)”中几乎所有时间节点都是错误的。“AT&T与BSD之间的诉讼，是当代版权制度最恶劣的应用之一。”这个结论不知从何谈起。因为上面说了，1980 年美国国会方才通过了版权法修正案，将计算机软件正式纳入版权法的保护对象。“销售Unix的利润，在公司全部业务中，几乎可以忽略不计。”找不到销售数据，来源请求。
+
+“我们有相当的技术背景和良好的头脑，但是缺乏足够的法律安全意识和有效的领导可以将 BSD 的不同部落团结起来，去带领我们走出去艰难时刻。这场重大的风暴中，我们失去了非常重要的两年战略。—— FreeBSD 创始人之一 Jordan Hubbard”：我并未找到出处，来源请求。
+
+
+“were peed upon to make them smell like Berkeley”来源请求。
 
