--- a/di-19-zhang-wen-xue-gu-shi/19.3-linux-da-bai-ju.md
+++ b/di-19-zhang-wen-xue-gu-shi/19.3-linux-da-bai-ju.md
@@ -1,4 +1,4 @@
-# 第 19.3 节 Linux 大败局
+# 第 19.3 节 再考 FreeBSD 大败局
 
 本文旨在回应 [还有人记得 Linux 之前，那个理想又骄傲的 BSD 吗？](https://my.oschina.net/u/5324949/blog/5434988)与 [FreeBSD 大败局](https://my.oschina.net/oscpyaqxylk/blog/5457229) 两篇文章。
 
