--- a/di-19-zhang-wen-xue-gu-shi/19.3-linux-da-bai-ju.md
+++ b/di-19-zhang-wen-xue-gu-shi/19.3-linux-da-bai-ju.md
@@ -1,8 +1,7 @@
-# 第 19.3 节 再考 FreeBSD 大败局
+# 第 19.3 节 再考《还有人记得 Linux 之前，那个理想又骄傲的 BSD 吗？》
 
-本文旨在回应 [还有人记得 Linux 之前，那个理想又骄傲的 BSD 吗？](https://my.oschina.net/u/5324949/blog/5434988)与 [FreeBSD 大败局](https://my.oschina.net/oscpyaqxylk/blog/5457229) 两篇文章。
 
-## 回应[还有人记得 Linux 之前，那个理想又骄傲的 BSD 吗？](https://my.oschina.net/u/5324949/blog/5434988)
+## 再考[还有人记得 Linux 之前，那个理想又骄傲的 BSD 吗？](https://my.oschina.net/u/5324949/blog/5434988)
 
 “作为 Unix 最绕不开的一族分支，它的摇篮是当时美国最为激进的左派大本营 —— 加州大学伯克利分校。”开源软件运动本身就接近左翼，无论 GNU 还是 Linux。
 
@@ -35,6 +34,7 @@
 
 “我们有相当的技术背景和良好的头脑，但是缺乏足够的法律安全意识和有效的领导可以将 BSD 的不同部落团结起来，去带领我们走出去艰难时刻。这场重大的风暴中，我们失去了非常重要的两年战略。—— FreeBSD 创始人之一 Jordan Hubbard”：我并未找到出处，来源请求。
 
-
 “were peed upon to make them smell like Berkeley”来源请求。
+
+
 
