--- a/di-19-zhang-wen-xue-gu-shi/19.3-linux-da-bai-ju.md
+++ b/di-19-zhang-wen-xue-gu-shi/19.3-linux-da-bai-ju.md
@@ -1,7 +1,7 @@
-# 第 19.3 节 再考《还有人记得 Linux 之前，那个理想又骄傲的 BSD 吗？》
+# 第 19.3 节 驳《还有人记得 Linux 之前，那个理想又骄傲的 BSD 吗？》
 
 
-## 再考[还有人记得 Linux 之前，那个理想又骄傲的 BSD 吗？](https://my.oschina.net/u/5324949/blog/5434988)
+## 驳[还有人记得 Linux 之前，那个理想又骄傲的 BSD 吗？](https://my.oschina.net/u/5324949/blog/5434988)
 
 “作为 Unix 最绕不开的一族分支，它的摇篮是当时美国最为激进的左派大本营 —— 加州大学伯克利分校。”开源软件运动本身就接近左翼，无论 GNU 还是 Linux。
 
