--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.6-jie-NextCloud.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.6-jie-NextCloud.md
@@ -237,9 +237,56 @@ Alias /nextcloud /usr/local/www/nextcloud
 
 ![nextcloud FreeBSD 开始界面](../.gitbook/assets/nextclould4.png)
 
+
+## 在 nextcloud 中挂载 samba 共享
+
+### 安装模块 `php82-pecl-smbclient`
+
+在 nextcloud 服务器端：
+
+```sh
+# pkg install php82-pecl-smbclient
+```
+
+或者 
+
+```sh
+# cd /usr/ports/net/pecl-smbclient/ 
+# make install clean
+```
+
+重启 apache：
+
+```sh
+# service apache24 restart
+```
+
+### 设置 samba 共享
+
+找到“应用”
+
+![nextcloud_smb_1](../.gitbook/assets/nextcloud_smb_1.png)
+
+找到外部存储支持，并启用之（默认已禁用）
+
+![nextcloud_smb_2](../.gitbook/assets/nextcloud_smb_2.png)
+
+进入管理设置：
+
+![nextcloud_smb_3](../.gitbook/assets/nextcloud_smb_3.png)
+
+找到管理中的外部存储（不是“个人”里面的外部存储）
+
+![nextcloud_smb_4](../.gitbook/assets/nextcloud_smb_4.png)
+
+查看所有文件，samba 已启用：
+
+![nextcloud_smb_5](../.gitbook/assets/nextcloud_smb_5.png)
+
+
 ## 备注
 
-常用插件，可以用 `pkg search -x nextcloud | grep php82` 查找，pkg 安装。
+其他常用插件，可以用 `pkg search -x nextcloud | grep php82` 查找，pkg 安装。
 
 >**注意**
 >
