新增一节“第 5.10 节 FreeBSD 安装微信（Linux 版） 警告”

--- a/di-5-zhang-shu-ru-fa-ji-chang-yong-ruan-jian/5.10-wechat.md
+++ b/di-5-zhang-shu-ru-fa-ji-chang-yong-ruan-jian/5.10-wechat.md
@@ -6,14 +6,6 @@
 
 ## 基于 RockyLinux 兼容层（FreeBSD Port）
 
-下载微信：
-
-官方地址：[微信 Linux 测试版](https://linux.weixin.qq.com/)
-
-```sh
-# fetch https://dldir1v6.qq.com/weixin/Universal/Linux/WeChatLinux_x86_64.rpm # 写作本文时链接如此，请自行获取最新链接
-```
-
 安装 rpm 工具：
 
 ```sh
@@ -25,6 +17,14 @@
 ```
 # cd /usr/ports/archivers/rpm4/ 
 # make install clean
+```
+
+下载微信：
+
+官方地址：[微信 Linux 测试版](https://linux.weixin.qq.com/)
+
+```sh
+# fetch https://dldir1v6.qq.com/weixin/Universal/Linux/WeChatLinux_x86_64.rpm # 写作本文时链接如此，请自行获取最新链接
 ```
 
 安装微信：
@@ -116,23 +116,18 @@ bash-5.1# ldd /opt/wechat/wechat
 - 安装缺少的依赖 `libatomic.so.1`：
 
 ```sh
-# pkg install linux-rl9-libatomic 
+# pkg install linux-rl9-libatomic
 ```
 或者：
 
 ```sh
-# cd /usr/ports/devel/linux-rl9-libatomic/ 
-# make install clean
+# cd /usr/ports/devel/linux-rl9-libatomic/ && make install clean
 ```
 
-- 继续安装缺少的依赖 `libbz2.so.1.0`：
+- 继续解决缺少的依赖 `libbz2.so.1.0`：
 
 ```sh
-# fetch https://dl.rockylinux.org/pub/rocky/9/BaseOS/x86_64/os/Packages/b/bzip2-libs-1.0.8-8.el9.x86_64.rpm
-# cd /compat/linux/
-root@ykla:/compat/linux # rpm2cpio < bzip2-libs-1.0.8-8.el9.x86_64.rpm  | cpio -id #注意 bzip2-libs-1.0.8-8.el9.x86_64.rpm 的路径改成你自己的
-157 blocks
-root@ykla:/compat/linux # mv /compat/linux/lib64/libbz2.so.1 /compat/linux/lib64/libbz2.so.1.0 # 重命名所需的库
+root@ykla:/compat/linux # mv /compat/linux/lib64/libbz2.so.1.0.8 /compat/linux/lib64/libbz2.so.1.0  # 重命名所需的库
 ```
 
 - 解决依赖 `libxkbcommon-x11.so.0`:
@@ -153,24 +148,29 @@ root@ykla:/compat/linux #  rpm2cpio < xcb-util-wm-0.4.1-22.el9.x86_64.rpm  | cpi
 175 blocks
 ```
 
-- 解决依赖 `libxcb-image.so.0`：
+- 解决其他 xcb 库相关依赖：
 
 ```sh
-# fetch https://dl.rockylinux.org/pub/rocky/9/devel/x86_64/os/Packages/x/xcb-util-image-0.4.0-19.el9.0.1.x86_64.rpm
-# cd /compat/linux/
-root@ykla:/compat/linux # rpm2cpio < xcb-util-image-0.4.0-19.el9.0.1.x86_64.rpm | cpio -id 
-47 blocks
+# pkg install linux-rl9-xcb-util
 ```
 
-- 解决依赖 `libxcb-render-util.so.0`：
+或者
 
 ```sh
-# fetch https://dl.rockylinux.org/pub/rocky/9/AppStream/x86_64/os/Packages/x/xcb-util-renderutil-0.3.9-20.el9.0.1.x86_64.rpm
-# cd /compat/linux/
-root@ykla:/compat/linux #  rpm2cpio < xcb-util-renderutil-0.3.9-20.el9.0.1.x86_64.rpm  | cpio -id 
-59 blocks
+# cd /usr/ports/x11/linux-rl9-xcb-util/ 
+# make install clean
 ```
 
+启动微信：
+
+```sh
+# /compat/linux/opt/wechat/wechat
 ```
-pkg install linux-rl9-xcb-util
-```
+
+功能正常：
+
+![FreeBSD 微信](../.gitbook/assets/wechat1.png)
+
+![FreeBSD 微信](../.gitbook/assets/wechat2.png)
+
+![FreeBSD 微信](../.gitbook/assets/wechat3.png)
