--- a/di-5-zhang-shu-ru-fa-ji-chang-yong-ruan-jian/5.10-wechat.md
+++ b/di-5-zhang-shu-ru-fa-ji-chang-yong-ruan-jian/5.10-wechat.md
@@ -1,8 +1,5 @@
 # 第 5.10 节 FreeBSD 安装微信（Linux 版）
 
->**警告**
->
->正在测试
 
 ## 基于 RockyLinux 兼容层（FreeBSD Port）
 
@@ -113,7 +110,7 @@ bash-5.1# ldd /opt/wechat/wechat
 	libgpg-error.so.0 => /lib64/libgpg-error.so.0 (0x0000000812596000)
 ```
 
-- 安装缺少的依赖 `libatomic.so.1`：
+- 解决缺少的依赖 `libatomic.so.1`：
 
 ```sh
 # pkg install linux-rl9-libatomic
