--- a/di-5-zhang-shu-ru-fa-ji-chang-yong-ruan-jian/5.10-wechat.md
+++ b/di-5-zhang-shu-ru-fa-ji-chang-yong-ruan-jian/5.10-wechat.md
@@ -3,7 +3,7 @@
 
 ## 基于 RockyLinux 兼容层（FreeBSD Port）
 
-安装 rpm 工具：
+### 安装 rpm 工具
 
 ```sh
 # pkg install rpm4
@@ -16,7 +16,9 @@
 # make install clean
 ```
 
-下载微信：
+### 下载安装微信
+
+#### 下载微信
 
 官方地址：[微信 Linux 测试版](https://linux.weixin.qq.com/)
 
@@ -24,13 +26,15 @@
 # fetch https://dldir1v6.qq.com/weixin/Universal/Linux/WeChatLinux_x86_64.rpm # 写作本文时链接如此，请自行获取最新链接
 ```
 
-安装微信：
+#### 安装微信
 
 ```sh
 root@ykla:/ # cd /compat/linux/
 root@ykla:/compat/linux # rpm2cpio < WeChatLinux_x86_64.rpm  | cpio -id #注意 WeChatLinux_x86_64.rpm 的路径改成你自己的
 1393412 blocks
 ```
+
+### 解决依赖问题
 
 查看依赖：
 
@@ -158,7 +162,7 @@ root@ykla:/compat/linux #  rpm2cpio < xcb-util-wm-0.4.1-22.el9.x86_64.rpm  | cpi
 # make install clean
 ```
 
-启动微信：
+### 启动微信
 
 ```sh
 # /compat/linux/opt/wechat/wechat
