--- a/di-5-zhang-shu-ru-fa-ji-chang-yong-ruan-jian/5.10-wechat.md
+++ b/di-5-zhang-shu-ru-fa-ji-chang-yong-ruan-jian/5.10-wechat.md
@@ -131,6 +131,10 @@ bash-5.1# ldd /opt/wechat/wechat
 root@ykla:/compat/linux # mv /compat/linux/lib64/libbz2.so.1.0.8 /compat/linux/lib64/libbz2.so.1.0  # 重命名所需的库
 ```
 
+>**技巧**
+>
+>`libbz2.so.1` 这个库本来就有，但是名字不一样，你找不到的话，自己输入 `ls /compat/linux/lib64/libbz2` 然后安 **TAB** 补全看一下你的名字是什么。
+
 - 解决依赖 `libxkbcommon-x11.so.0`:
 
 ```sh
@@ -139,6 +143,11 @@ root@ykla:/compat/linux # mv /compat/linux/lib64/libbz2.so.1.0.8 /compat/linux/l
 root@ykla:/compat/linux # rpm2cpio < libxkbcommon-x11-1.0.3-4.el9.x86_64.rpm  | cpio -id 
 82 blocks
 ```
+
+>**技巧**
+>
+>当找不到 rockylinux 的某某库时，可以到 <https://rockylinux.pkgs.org/> 搜索。
+
 
 - 解决依赖 `libxcb-icccm.so.4`：
 
