--- a/di-5-zhang-shu-ru-fa-ji-chang-yong-ruan-jian/5.10-wechat.md
+++ b/di-5-zhang-shu-ru-fa-ji-chang-yong-ruan-jian/5.10-wechat.md
@@ -133,7 +133,7 @@ root@ykla:/compat/linux # mv /compat/linux/lib64/libbz2.so.1.0.8 /compat/linux/l
 
 >**技巧**
 >
->`libbz2.so.1` 这个库本来就有，但是名字不一样，你找不到的话，自己输入 `ls /compat/linux/lib64/libbz2` 然后安 **TAB** 补全看一下你的名字是什么。
+>`libbz2.so.1` 这个库本来就有，但是名字不一样，你找不到的话，自己输入 `ls /compat/linux/lib64/libbz2` 然后按一下 **TAB** 补全看一下你的名字是什么。
 
 - 解决依赖 `libxkbcommon-x11.so.0`:
 
