--- a/di-5-zhang-shu-ru-fa-ji-chang-yong-ruan-jian/5.10-wechat.md
+++ b/di-5-zhang-shu-ru-fa-ji-chang-yong-ruan-jian/5.10-wechat.md
@@ -1,9 +1,5 @@
 # 第 5.10 节 FreeBSD 安装微信（Linux 版）
 
->**注意**
->
->目前输入法存在问题。无法输入中文。
-
 ## 基于 RockyLinux 兼容层（FreeBSD Port）
 
 >**注意**
@@ -181,8 +177,9 @@ root@ykla:/compat/linux #  rpm2cpio < xcb-util-wm-0.4.1-22.el9.x86_64.rpm  | cpi
 ### 启动微信
 
 ```sh
-# /compat/linux/opt/wechat/wechat
+$ /compat/linux/opt/wechat/wechat
 ```
+
 
 功能正常：
 
@@ -191,3 +188,7 @@ root@ykla:/compat/linux #  rpm2cpio < xcb-util-wm-0.4.1-22.el9.x86_64.rpm  | cpi
 ![FreeBSD 微信](../.gitbook/assets/wechat2.png)
 
 ![FreeBSD 微信](../.gitbook/assets/wechat3.png)
+
+如果普通用户以 root 权限运行兼容层应用，则输入法会有问题。请以普通用户权限运行之。
+
+![FreeBSD 微信](../.gitbook/assets/wechat4.png)
