--- a/di-24-zhang-freebsd-te-se/di-24.2-jie-freebsd-mu-lu-jie-gou.md
+++ b/di-24-zhang-freebsd-te-se/di-24.2-jie-freebsd-mu-lu-jie-gou.md
@@ -1,5 +1,10 @@
 # 第 24.2 节 FreeBSD 目录结构
 
+FreeBSD 系统源代码概览：
+
+![FreeBSD 系统源代码](../.gitbook/assets/bsdsrc.png)
+
+
 FreeBSD 在设计上属于学院派，条理清晰。
 
 |      路径      |                                       简介                                       |
