--- a/di-5-zhang-shu-ru-fa-ji-chang-yong-ruan-jian/5.10-wechat.md
+++ b/di-5-zhang-shu-ru-fa-ji-chang-yong-ruan-jian/5.10-wechat.md
@@ -180,6 +180,25 @@ root@ykla:/compat/linux #  rpm2cpio < xcb-util-wm-0.4.1-22.el9.x86_64.rpm  | cpi
 $ /compat/linux/opt/wechat/wechat
 ```
 
+#### 软件图标
+
+在路径 `~/.local/share/applications` 下新建文本文件 `wechat.desktop`，写入：
+
+```ini
+[Desktop Entry]
+Name=WeChat
+Comment=微信
+Exec=/compat/linux/opt/wechat/wechat
+Terminal=false
+Type=Application
+Encoding=UTF-8
+Icon=/compat/linux/opt/wechat/icons/wechat.png
+Path=
+StartupNotify=false
+Categories=Network
+```
+
+重启系统，即可在系统菜单中找到微信。
 
 功能正常：
 
