--- a/di-5-zhang-shu-ru-fa-ji-chang-yong-ruan-jian/5.10-wechat.md
+++ b/di-5-zhang-shu-ru-fa-ji-chang-yong-ruan-jian/5.10-wechat.md
@@ -149,7 +149,7 @@ root@ykla:/compat/linux # rpm2cpio < libxkbcommon-x11-1.0.3-4.el9.x86_64.rpm  | 
 
 >**技巧**
 >
->当找不到 rockylinux 的某某库时，可以到 <https://rockylinux.pkgs.org/> 搜索。
+>当找不到 rockylinux 的某某库时，可以到 <https://rockylinux.pkgs.org/> 搜索。FreeBSD Ports 已经打包了一部分，可以参照 pkg 章节使用 `pkg-provides` 搜索一下。
 
 
 - 解决依赖 `libxcb-icccm.so.4`：
