--- a/di-21-zhang-linux-jian-rong-ceng/di-21.2-jie-linux-jian-rong-ceng-ji-yu-centos-yuan-sheng.md
+++ b/di-21-zhang-linux-jian-rong-ceng/di-21.2-jie-linux-jian-rong-ceng-ji-yu-centos-yuan-sheng.md
@@ -1,9 +1,10 @@
-# 第 21.2 节 Linux 兼容层——基于 CentOS（原生）
+# 第 21.2 节 Linux 兼容层——基于 CentOS（FreeBSD Port）
 
+>**警告**
+>
+>此兼容层基于 CentOS 7.9，并有计划移除，请优先使用 RockyLinux 兼容层（FreeBSD Port）。
 
-## CentOS 兼容层（原生）
-
-### 安装基本系统
+## 安装基本系统
 
 ```sh
 # sysrc linux_enable="YES"
