使用软链接

--- a/di-5-zhang-shu-ru-fa-ji-chang-yong-ruan-jian/5.10-wechat.md
+++ b/di-5-zhang-shu-ru-fa-ji-chang-yong-ruan-jian/5.10-wechat.md
@@ -131,7 +131,7 @@ bash-5.1# ldd /opt/wechat/wechat
 - 继续解决缺少的依赖 `libbz2.so.1.0`：
 
 ```sh
-root@ykla:/compat/linux # mv /compat/linux/lib64/libbz2.so.1.0.8 /compat/linux/lib64/libbz2.so.1.0  # 重命名所需的库
+# ln -s /compat/linux/lib64/libbz2.so.1.0.8 /compat/linux/lib64/libbz2.so.1.0 # 重命名所需的库
 ```
 
 >**技巧**
