--- a/di-21-zhang-linux-jian-rong-ceng/di-21.13-jie-linux-jian-rong-ceng-gu-zhang-pai-chu-yu-pei-zhi.md
+++ b/di-21-zhang-linux-jian-rong-ceng/di-21.13-jie-linux-jian-rong-ceng-gu-zhang-pai-chu-yu-pei-zhi.md
@@ -138,6 +138,7 @@ root@ykla:~ # sysctl -a -d  | grep -E "linux|compat.linux"
 
 以下是输出的翻译和表格化：
 
+|sysctl 变量|解释|
 | :--- | :--- |
 | `kern.features.linux64` | 支持 64 位 Linux |
 | `kern.features.linux` | 支持 32 位 Linux |
