--- a/di-24-zhang-freebsd-te-se/di-24.1-jie-bsd-init-guan-li-fu-wu.md
+++ b/di-24-zhang-freebsd-te-se/di-24.1-jie-bsd-init-guan-li-fu-wu.md
@@ -57,7 +57,7 @@ sysrc XXX_enable="NO"
 
 rc.conf 管理着所有系统服务。与之相关的文件和路径如下：
 
-1. 默认的配置位于 `/etc/defaults/rc.conf`。**这个是用来看的，不是用来改的，基本每项都有详细注释说明用途。** 改请改 `/etc/defaults/rc.conf`。
+1. 默认的配置位于 `/etc/defaults/rc.conf`。**这个是用来看的，不是用来改的，基本每项都有详细注释说明用途。** 改请改 `/etc/rc.conf`。
 2. 用户自定义的配置位于 `/etc/rc.conf`。例如，如果想让系统自动启动 ssh、ipfw、nginx 等服务，就要修改该文件。**注意，`/etc/rc.conf` 的优先级高于 `/etc/defaults/rc.conf`；即 `/etc/rc.conf` 会覆盖 `/etc/defaults/rc.conf`。**
 3. 基本系统的服务脚本位于 `/etc/rc.d/`。第三方应用的服务脚本位于 `/usr/local/etc/rc.d/`。
 
