--- a/di-16-zhang-fu-wu-qi/di-16.3-jie-nodejs-xiang-guan.md
+++ b/di-16-zhang-fu-wu-qi/di-16.3-jie-nodejs-xiang-guan.md
@@ -1,10 +1,12 @@
 # 第 16.3 节 Nodejs 相关
 
-## 在 FreeBSD 13 上的安装
+## 更新基本系统
 
-pkg 安装的二进制 `nodejs` 依赖 `/lib/libcrypto.so.111`，即某个特定版本，而这意味着如果你需要在 FreeBSD 上使用 NodeJS，你必须留意 FreeBSD 本身的版本，尤其当你的 pkg 配置使用了 latest 源时。
+pkg 安装的二进制 `nodejs` 依赖 `/lib/libcrypto.so.xxx`，即某个特定版本，而这意味着如果你需要在 FreeBSD 上使用 NodeJS，你必须留意 FreeBSD 本身的版本，尤其当你的 pkg 配置使用了 latest 源时。
 
-如果想要在 FreeBSD 13.1 上安装 node+yarn，请先更新基本系统再安装：
+如果想要在 FreeBSD 上安装 node+yarn，请先更新基本系统再安装。
+
+## yarn + nodejs
 
 ```sh
 # freebsd-update fetch install #必须先更新基本系统
@@ -17,7 +19,7 @@ pkg 安装的二进制 `nodejs` 依赖 `/lib/libcrypto.so.111`，即某个特定
 # cd /usr/ports/www/yarn/ && make install clean #使用 ports 编译可规避上述问题
 ```
 
-仅安装 npm：
+## npm + nodejs
 
 ```sh
 # pkg install npm
@@ -30,10 +32,12 @@ pkg 安装的二进制 `nodejs` 依赖 `/lib/libcrypto.so.111`，即某个特定
 # make install clean
 ```
 
-> 如果你跳过了 FreeBSD 的更新过程而直接安装软件，那么在 FreeBSD 13.0 上，你将会遇到以下错误：
->
-> ```sh
-> # pkg install yarn
-> % node
-> ld-elf.so.1: /lib/libcrypto.so.111: version OPENSSL_1_1_1e required by /usr/local/bin/node not found
-> ```
+## 故障排除
+
+- 如果你跳过了 FreeBSD 基本系统的更新而直接安装软件，那么在 FreeBSD 上，你将有可能遇到以下错误：
+
+```sh
+# pkg install yarn
+% node
+ld-elf.so.1: /lib/libcrypto.so.111: version OPENSSL_1_1_1e required by /usr/local/bin/node not found
+```
